Fix tab overflow issue

--- a/src/app/puzzle-list/puzzle-list.component.scss
+++ b/src/app/puzzle-list/puzzle-list.component.scss
@@ -69,7 +69,7 @@
 }
 
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 911px) {
     .top-buttons {
         margin-top: 1rem;
 
